# game-server-alg

./: Cargo.toml  README.md  specification.md
algorithmplayer/: Cargo.toml
algorithmplayer/src/: algorithmplayer.rs  lib.rs
algorithmplayer/src/algorithm/: algorithmmodel.rs  horizontaliterator.rs  randomboardgen.rs  verticaliterator.rs
algorithmplayer/src/data/: mod.rs
localplayer/: Cargo.toml
localplayer/src/: dealer.rs  main.rs
localplayer/src/algorithm/: algorithmmodel.rs  horizontaliterator.rs  randomboardgen.rs  verticaliterator.rs
localplayer/src/data/: game.rs  mod.rs
localplayer/src/player/: algorithmplayer.rs  mod.rs
player/: Cargo.toml
player/src/: dealer.rs  main.rs
player/src/algorithm/: algorithmmodel.rs  verticaliterator.rs
player/src/data/: mod.rs
player/src/player/: mod.rs
server/: Cargo.toml
server/src/: game.rs  gamedata.rs  gamestate.rs  main.rs  validation.rs
server/src/data/: coord.rs  mod.rs  ship.rs  statecoord.rs
server/src/json/: mod.rs  report.rs  result.rs  shots.rs
server/src/view/: gameview.rs  mod.rs
serverinfo/: Cargo.toml
serverinfo/src/data/: coord.rs  gamesetup.rs  gamestate.rs  mod.rs  shipinfo.rs  shots.rs
serverinfo/src/json/: gamesetup.rs  mod.rs  report.rs  shipinfo.rs
serverplayer/: Cargo.toml
serverplayer/src/: main.rs
serverplayer/src/algorithm/: algorithmmodel.rs  (+4 more)
shipjson/: Cargo.toml
src/: dealer.rs  main.rs
src/algorithm/: algorithmmodel.rs  horizontaliterator.rs  mod.rs  randomboardgen.rs  verticaliterator.rs
src/data/: game.rs  mod.rs
src/player/: algorithmplayer.rs
(+41 files in other folders)
